# qux-pqc

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.claude-flow/: daemon-state.json  daemon.pid
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: dsa.rs  error.rs  index.ts  kem.rs  keys.rs  lib.rs  symmetric.rs  types.ts  utils.rs
src/core/: dsa.ts  kem.ts  keys.ts  session.ts  symmetric.ts
src/utils/: hash.ts
tests/: dsa.test.ts  hash.test.ts  integration.test.ts  kem.test.ts  keys.test.ts  symmetric.test.ts
