[package]
name = "qux-pqc"
version = "1.0.0"
edition = "2021"
authors = ["QuxTech <security@quxtech.com>"]
description = "Post-Quantum Cryptography library implementing NIST FIPS 203 (ML-KEM) and FIPS 204 (ML-DSA)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quxtech/qux-pqc"
documentation = "https://docs.rs/qux-pqc"
readme = "README.md"
keywords = ["cryptography", "post-quantum", "ml-kem", "ml-dsa", "kyber", "dilithium"]
categories = ["cryptography", "no-std"]
rust-version = "1.70"

[features]
default = ["std"]
std = []

[dependencies]
# Post-quantum cryptography
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# Symmetric cryptography
aes-gcm = "0.10"
sha3 = "0.10"
hkdf = "0.12"

# Utilities
rand = "0.9"
hex = "0.4"
zeroize = { version = "1.7", features = ["derive"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1", features = ["full", "test-util"] }

# Benchmarks and examples will be added later
# [[bench]]
# name = "pqc_benchmarks"
# harness = false
